<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fundal"
    android:orientation="vertical"
    android:visibility="visible">


    <ImageView
        android:id="@+id/topbackground"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/topb"
        android:cropToPadding="false"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/scor"
        android:layout_width="148dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="16dp"
        android:text="@string/scor"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Eu"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/topbackground"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-1dp"
        android:layout_toStartOf="@+id/euimg"
        android:text="@string/eu"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/android"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="169dp"
        android:layout_marginRight="169dp"
        android:text="@string/android"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/euimg"
        android:layout_width="73dp"
        android:layout_height="55dp"
        android:layout_below="@+id/topbackground"
        android:layout_alignEnd="@+id/eualeg"
        android:layout_alignRight="@+id/eualeg"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-7dp"
        android:layout_marginRight="-7dp"
        android:contentDescription="@string/euimg"
        app:srcCompat="@drawable/eupng" />

    <ImageView
        android:id="@+id/androidimg"
        android:layout_width="82dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:contentDescription="@string/androidimg"
        app:srcCompat="@drawable/andr" />

    <ImageView
        android:id="@+id/eualeg"
        android:layout_width="149dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:contentDescription="@string/eualeg"
        app:srcCompat="@drawable/scissors" />

    <ImageView
        android:id="@+id/androidalege"
        android:layout_width="143dp"
        android:layout_height="93dp"
        android:layout_below="@+id/android"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:contentDescription="@string/androidalege"
        app:srcCompat="@drawable/rock" />

    <Button
        android:id="@+id/rock"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:layout_alignTop="@+id/topbackground"
        android:layout_alignEnd="@+id/topbackground"
        android:layout_alignRight="@+id/topbackground"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="249dp"
        android:layout_marginRight="249dp"
        android:background="@drawable/buton_texturat"
        android:text="@string/piatra"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/paper"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:layout_alignTop="@+id/topbackground"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="@drawable/buton_texturat"
        android:text="@string/hartie"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/scissors"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:layout_alignTop="@+id/topbackground"
        android:layout_alignEnd="@+id/topbackground"
        android:layout_alignRight="@+id/topbackground"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/buton_texturat"
        android:text="@string/foarfeca"
        android:textAllCaps="false"
        android:textSize="16sp" />


</RelativeLayout>
